Fixed spacing on detail headers

--- a/wedding/global_style.css
+++ b/wedding/global_style.css
@@ -194,7 +194,7 @@ nav a {
 }
 
 .details_header {
-	margin-top: 1em 0;
+	margin: 1em 0;
 	padding-top: 1em;
 }
 
